--- a/vs-project/ggr.vcxproj.filters
+++ b/vs-project/ggr.vcxproj.filters
@@ -297,6 +297,12 @@
     <ClInclude Include="..\source\primitives\vector.h">
       <Filter>source\primitives</Filter>
     </ClInclude>
+    <ClInclude Include="..\source\textures\bump-map.h">
+      <Filter>source\textures</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\textures\height-map.h">
+      <Filter>source\textures</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\accelerators\bb-accelerator.cpp">
@@ -523,6 +529,12 @@
     </ClCompile>
     <ClCompile Include="..\examples\example-0.cpp">
       <Filter>examples</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\materials\material.cpp">
+      <Filter>source\materials</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\textures\height-map.cpp">
+      <Filter>source\textures</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
