Add volume class

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(textures)
 add_subdirectory(shaders)
 add_subdirectory(lighting)
 add_subdirectory(materials)
+add_subdirectory(volume)
 add_subdirectory(entities)
 add_subdirectory(accelerators)
 add_subdirectory(integrators)
