--- a/source/entities/CMakeLists.txt
+++ b/source/entities/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(Entities entity.cpp
 	light-entity.cpp)
-target_link_libraries(Entities Materials)
+target_link_libraries(Entities Volume)
